# span-cli

./: .gitignore  pyproject.toml  span.yaml.example
.github/workflows/: ci.yml
span/: cli.py  config.py
span/context/: parser.py  repo_map.py
span/core/: agent.py  verifier.py
span/events/: stream.py
span/llm/: client.py  prompts.py
span/models/: events.py  tools.py
span/tools/: base.py  file_ops.py  shell.py
tests/: test_agent.py  test_agent_integration.py  test_cli.py  test_config.py  test_events.py  test_llm.py  test_repo_map.py  test_tools.py  test_tools_base.py  test_verifier.py
